table z-index fix second sticky on Jquery = calc fix

--- a/resources/assets/carhouse/css/style.css
+++ b/resources/assets/carhouse/css/style.css
@@ -30,8 +30,6 @@ img {
 .content{
     flex-basis: 682px;
     flex-grow: 11;
-    position: relative;
-    z-index: -1;
 }
 
 /** MAIN-NAV**/
